fix: fix wrong imports in CommentRepository, format spacing, indentation, fix typos and blank lines, rename the methods to more meaningful ones, add jjwt dependencies in the gradle spec